FIX no more nowrap for <code>

--- a/public/css/kamba.css
+++ b/public/css/kamba.css
@@ -6,10 +6,6 @@ button, input, optgroup, select, textarea {
     font-weight: normal;
 }
 
-code {
-    white-space: nowrap;
-}
-
 .grab {
     cursor: grab;
     cursor: -moz-grab;
